# prm

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix
.github/: RELEASE.md
.github/homebrew/: prm.rb.template
.github/workflows/: aur-package.yml  ci.yml  nix-flake-check.yml  release.yml
packaging/aur/: PKGBUILD-bin.in  PKGBUILD.in  README.md
scripts/: prepare_release.py  render_aur_pkgbuild.py  render_homebrew_formula.py  sync_version.py
src/: cli.rs  git.rs  lib.rs  main.rs  meta.rs  pathing.rs  settings.rs  tui.rs
src/app/: events.rs  state.rs
src/db/: mod.rs  repo.rs  schema.rs
src/domain/: project.rs  todo.rs
src/fs/: agents.rs  markdown.rs  mod.rs
src/ui/: layout.rs  mod.rs  render.rs  theme.rs  widgets.rs
tests/: cli_add.rs  release_tooling.rs
