[package]
name = "prm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Terminal-first project repository manager."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bencetotht/prm"
homepage = "https://github.com/bencetotht/prm"
keywords = ["cli", "tui", "ratatui", "productivity", "git"]
categories = ["command-line-utilities"]

[[bin]]
name = "prm"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
